--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project default="xar" name="tcadrt-data">
     <xmlproperty file="expath-pkg.xml"/>
     <property name="project.version" value="${package(version)}"/>
-    <property name="project.app" value="tcadrt-data"/>
+    <property name="project.app" value="ztcadrt-data"/>
     <property name="build.dir" value="build"/>
     <target name="xar">
         <mkdir dir="${build.dir}"/>
